--- a/src/features/Apiexplorer/styles.module.scss
+++ b/src/features/Apiexplorer/styles.module.scss
@@ -8,7 +8,7 @@
 
   .pageWrapper {
     display: flex;
-    color: #151717;
+    color: var(--ifm-color-emphasis-1000);
 
     .playground {
       display: flex;
